src/app.css
@import 'tailwindcss';

@import './styles/font.css';

@plugin "@tailwindcss/typography";
@plugin "@tailwindcss/forms";

/* Use data attribute to apply theme */
@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));

@theme {
  /* Font family utilities */
  --font-mono: Berkeley Mono Variable, Berkeley Mono, monospace;
  --font-sans: Univers, sans-serif;

  /* Animation utilities */
  --animate-fade: fade 1ms ease;

  @keyframes fade {
    from {
      opacity: 0;
    }
    to {
      opacity: 1;
    }
  }
}

:root {
  /* Navbar variables */
  --navbar-height: calc(var(--spacing) * 8);

  /* Scrollbar variables */
  --scrollbar-color-thumb: var(--color-orange-900);
  --scrollbar-color-track: var(--color-orange-100);
  --scrollbar-width: auto;
  --scrollbar-width-legacy: var(--text-base);

  /* Scroll timeline variables */
  --scroll-timeline: --scroll-timeline;
}

/* Default scrollbar styling */
/* https://developer.chrome.com/docs/css-ui/scrollbar-styling */
@supports (scrollbar-width: auto) {
  * {
    scrollbar-color: var(--scrollbar-color-thumb) var(--scrollbar-color-track);
    scrollbar-width: var(--scrollbar-width);
  }
}

/* Fallback scrollbar styling */
@supports not (scrollbar-color: auto) {
  ::-webkit-scrollbar {
    -webkit-appearance: none;
    height: var(--scrollbar-width-legacy);
    width: var(--scrollbar-width-legacy);
  }

  ::-webkit-scrollbar-thumb {
    background: var(--scrollbar-color-thumb);
    border-radius: var(--radius-lg);
    border: var(--spacing) solid var(--scrollbar-color-track);
  }

  ::-webkit-scrollbar-track {
    background: var(--scrollbar-color-track);
  }

  ::-webkit-scrollbar-corner {
    background: var(--scrollbar-color-track);
  }
}

/* Scroll timeline utilities */
@utility scroll-timeline-y {
  scroll-timeline: --scroll-timeline y; /* Chromium */
  scroll-timeline: --scroll-timeline vertical; /* Firefox */
}

@utility scroll-timeline-x {
  scroll-timeline: --scroll-timeline x; /* Chromium */
  scroll-timeline: --scroll-timeline horizontal; /* Firefox */
}

@utility animate-scroll-timeline {
  animation-duration: 1ms; /* Firefox */
  animation-timeline: --scroll-timeline;
}

